# susu_ro

./: .env.demo  .gitignore  pyproject.toml
notebooks/: whisper_cpu.py
src/: main.py
src/core/agent/: susu_ro.py
src/core/stt/: whisper.py
